tests/script_errors/const_expr_range_on_non_array/error.txt
Error: 
    1 | {"snot":"badger"}[5:9]
      |                   ^^^ Conflicting types, got record but expected array
